packages/cashc/test/syntax/success/p2palindrome.cash
contract P2Palindrome() {
    function spend(string palindrome) {
        require(palindrome.reverse() == palindrome);
    }
}
