packages/cashc/test/syntax/fail/unterminated_member.cash
contract Test() {
    function hello(bytes a) {
        bytes b = a.reverse(
        require(b == a);
    }
}
